# umlautkey

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
icons/: umlautkey_designed.icns
src/: main.rs
src/de/: methods.rs  mod.rs  rules.rs
src/platform/: mod.rs
src/platform/macos/: Info.plist  methods.rs  umlautkey_black.icns
src/platform/windowos/: methods.rs
