[package]
name = "umlautkey"
description = "The lightweight, open-source utility for typing German Umlauts (ä, ö, ü, ß) effortlessly on standard US/International keyboards."
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.183"

[target.'cfg(target_os="macos")'.dependencies]
objc2-core-foundation = "0.3.2"
objc2-core-graphics = { version = "0.3.2", features = ["CGEvent", "CGEventTypes", "CGEventSource"] }


[package.metadata.bundle]
copyright = "Copyright (c) Duong Pham 2026. All rights reserved."
icon = ["icons/icon.icns", "icons/icon.png"]
identifier = "com.umlautkey.app"
name = "UmlautKey"
version = "0.1.0"
