[package]
name = "umlautkey"
description = "The lightweight, open-source utility for typing German Umlauts (ä, ö, ü, ß) effortlessly on standard US/International keyboards."
version = "1.0.0"
edition = "2024"

[dependencies]
cargo-bundle = "0.9.0"
libc = "0.2.183"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.10.1"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = { version = "0.3.2", features = ["CGEvent", "CGEventTypes", "CGEventSource"] }

[package.metadata.bundle]
name = "UmlautKey"
identifier = "com.umlautkey.app"
icon = ["icons/umlautkey_designed.icns"]
version = "1.0.0"
resources = []
copyright = "Copyright (c) Duong Pham 2026. All rights reserved."
category = "public.app-category.utilities"
short_description = "The lightweight, open-source utility for typing German Umlauts"
long_description = "The lightweight, open-source utility for typing German Umlauts (ä, ö, ü, ß) effortlessly on standard US/International keyboards."
